<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Machango Fight</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_app">Machango Fight</string>
    <string name="user_text">User</string>
    <string name="password_text">Password</string>
    <string name="forgot_text">Forgot password?</string>
    <string name="register_text">Register</string>
    <string name="nom_persona">Name</string>
    <string name="user_text_pista">User name</string>
    <string name="quit_button">Quit</string>
    <string name="password_text_pista">Password</string>
    <string name="password_text_pista_again">Repeat password</string>
    <string name="mail">Mail</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_buton">Login</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="playNow_button">Play Now</string>
    <string name="highscores_button">Highscores</string>
    <string name="options_button">Options</string>
    <string name="shop_button">Shop</string>
    <string name="logout_button">Log out</string>
    <string name="pause_menu">Pause menu</string>
    <string name="rendirse_button">Surrender</string>
    <string name="menu_principal">Go to main menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_choose_stage">ChooseStage</string>
    <string name="title_activity_loading">Loading</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="waiting_text">Waiting in queue</string>
    <string name="loading_text">Loading</string>
    <string name="title_activity_characters">Characters</string>
    <string name="idioma_text_buto">English</string>
    <string name="send_button">Send mail</string>
    <string name="title_activity_stats">Stats</string>
    <string name="titol_list_view">Stages</string>
    <string name="title_activity_downhill_escenari">Downhill_escenari</string>
    <string name="title_activity_shop">Shop</string>
    <string name="idioma_es">The current language is: </string>
    <string name="highscores_noms">Players</string>
    <string name="highscores_puntuacio">Points</string>
    <string name="highscores_escenaris">Stages</string>
    <string name="highscores_monedes">Coins</string>
    <string name="shop_nombre_objeto">Object</string>
    <string name="shop_precio">Price</string>
    <string name="shop_descripcion">Description</string>
    <string name="shop_pocion2_descripcion">Restores 50 mana</string>
    <string name="shop_pocion_descripcion">Increases attack by 8</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="si_button">Yes</string>
    <string name="no_button">No</string>
    <string name="text_sortir">Do you really want to quit?</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="developers">Developers</string>
    <string name="ompleContrasenya">Fill password</string>
    <string name="contrasenyesDiferents">Passwords mismatched</string>
    <string name="ompleUsuari">Fill user name</string>
    <string name="ompleMail">Fill e-mail</string>
    <string name="noMail">Wrong e-mail</string>
    <string name="noPass">Wrong format</string>
    <string name="noUser">Wrong user name</string>
    <string name="userExists">User already exists</string>
    <string name="registered">Properly registered</string>
    <string name="registerInstruction">Registration instructions</string>
    <string name="passwordInstruction">The password must be a minimum of 5 and a maximum of 15 characters. You can only write (a&#8211;z), (A&#8211;Z), (0&#8211;9) and \'._\'. Other symbols as \'ñ\' or \'ç\' can not be used.</string>
    <string name="userInstruction">The user\'s name follows the same rules as the password. In addition, the first letter must be capitalized.</string>
    <string name="wait_register">Wait while registering</string>
    <string name="revise_campos">Review the fields</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="user_playing">This user is already playing</string>
    <string name="server_error">Unable to establish a connection with server</string>
    

</resources>