<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/castillo"
    tools:context=".MainActivity" 
    >

    <com.ub.pis.views.CustomTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_app" 
        android:textColor="@color/text_principal"
        android:textSize="50sp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/login_buton"
        android:orientation="vertical" >

        <com.ub.pis.views.CustomTextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/text_principal"
            android:text="@string/register_text" />

        <com.ub.pis.views.CustomTextView
            android:id="@+id/forgot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/text_principal"
            android:text="@string/forgot_text" />
    </LinearLayout>

    <com.ub.pis.views.CustomButton
        android:id="@+id/login_buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        android:text="@string/login_buton" 
        android:textColor="@color/text_principal"
        android:alpha="1"
        android:background="@anim/boton1"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_margin="10dp"
        android:gravity="center"
        android:alpha="0.6"
        android:background="@drawable/login_container"
        android:padding="15dp"
        android:orientation="vertical" >

        <com.ub.pis.views.CustomEditText
		    android:id="@+id/user_entrace"
		    android:hint="@string/user_text_pista"
		    android:layout_width="match_parent"
		    android:layout_margin = "3dp"
		    android:layout_height="wrap_content"/>

        <com.ub.pis.views.CustomEditText
            android:id="@+id/password_edittext"
            android:hint="@string/password_text_pista"
            android:inputType="textPassword"
            android:layout_margin="3dp"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
    

</RelativeLayout>