<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipal" 
    android:screenOrientation="landscape"
    android:background="@drawable/castillo">

    <com.ub.pis.views.CustomButton
        android:id="@+id/options_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:text="@string/options_button" 
        android:background="@anim/boton1"
        android:textColor="@color/text_principal"/>

    <com.ub.pis.views.CustomButton
        android:id="@+id/highscores_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/options_button"
        android:layout_alignLeft="@+id/options_button"
        android:text="@string/highscores_button"
        
        android:background="@anim/boton1"
        android:textColor="@color/text_principal"/>

    <com.ub.pis.views.CustomButton
        android:id="@+id/shop_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quit_button"
        android:layout_alignLeft="@+id/quit_button"
        android:text="@string/shop_button" 
        android:background="@anim/boton1"
        android:textColor="@color/text_principal"/>

    <com.ub.pis.views.CustomButton
        android:id="@+id/quit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscores_button"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/playNow_button"
        android:text="@string/logout_button" 
        android:background="@anim/boton1"
        android:textColor="@color/text_principal"
        />

    <com.ub.pis.views.CustomButton
        android:id="@+id/playNow_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_above="@+id/highscores_button"
        android:layout_alignLeft="@+id/highscores_button"
        android:layout_marginBottom="17dp"
        android:text="@string/playNow_button" 
        android:background="@anim/boton1"
        android:textColor="@color/text_principal"/>

</RelativeLayout>