<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/highscores_container"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.ub.pis.views.CustomTextView
        android:id="@+id/text_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_sortir"
        android:textColor="@android:color/white" />

    <com.ub.pis.views.CustomButton
        android:id="@+id/si_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_pregunta"
        android:background="@anim/boton1"
        android:text="@string/si_button"
        android:textColor="@color/text_principal" />
    
     <com.ub.pis.views.CustomButton
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_pregunta"
        android:layout_toRightOf="@+id/si_button"
        android:background="@anim/boton1"
        android:text="@string/no_button"
        android:textColor="@color/text_principal" />

</RelativeLayout>