<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/castillo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForgotPasswordActivity" >

    <com.ub.pis.views.CustomButton
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:background="@anim/boton1"
        android:text="@string/quit_button"
        android:textColor="@color/text_principal" />

    <com.ub.pis.views.CustomTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/forgot_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_principal"
        android:textSize="25sp" />

    <com.ub.pis.views.CustomButton
        android:id="@+id/buto_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quit_button"
        android:layout_alignBottom="@+id/quit_button"
        android:layout_alignLeft="@+id/linearLayout1"
        android:background="@anim/boton1"
        android:text="@string/send_button"
        android:textColor="@color/text_principal" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="2000dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_above="@+id/buto_send"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical" >

        <com.ub.pis.views.CustomEditText
            android:id="@+id/forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:gravity="center"
            android:background="@drawable/login_container"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</RelativeLayout>