<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/castillo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <com.ub.pis.views.CustomButton
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:background="@anim/boton1"
        android:text="@string/quit_button"
        android:textColor="@color/text_principal" />

    <ScrollView 
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titolRegistrarse"
        android:layout_above="@+id/quit_button"
        android:background="@drawable/login_container"
        android:layout_margin="7dp">
        
         <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
		    
             <com.ub.pis.views.CustomEditText
		            android:id="@+id/nom_usuari_input"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/user_text_pista"
		            android:maxLength="15"/>
             
             <com.ub.pis.views.CustomTextView
		        android:id="@+id/errorUser"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/error_color"
		         />
             
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             
            <com.ub.pis.views.CustomEditText
		            android:id="@+id/mail_input"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textEmailAddress"
		            android:hint="@string/mail"/>
            
            <com.ub.pis.views.CustomTextView
		        android:id="@+id/errorMail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/error_color"
		         />
            
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            
		        <com.ub.pis.views.CustomEditText
		            android:id="@+id/contrasenya"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textPassword" 
		            android:hint="@string/password_text_pista"
		            android:maxLength="15"/>
		        
		        <com.ub.pis.views.CustomTextView
		        android:id="@+id/textContrasenya"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/error_color"
		         />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
		        
             <com.ub.pis.views.CustomEditText
		            android:id="@+id/mateixa_contrasenya"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textPassword"
		            android:hint="@string/password_text_pista_again"
		            android:maxLength="15"
		             />
             
             <com.ub.pis.views.CustomTextView
		        android:id="@+id/textContrasenyaMateixa"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/error_color"
		         />
        </TableRow>
    </TableLayout>
       
    </ScrollView>

    <com.ub.pis.views.CustomButton
        android:id="@+id/buto_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/quit_button"
        android:text="OK"
        android:background="@anim/boton1"
        android:textColor="@color/text_principal" />
	
    
    <com.ub.pis.views.CustomTextView
        android:id="@+id/titolRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/register_text"
        android:textColor="@color/text_principal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/scroll"
        android:background="@anim/info" />
    
    <FrameLayout 
        android:id="@+id/contenidorInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"/>

</RelativeLayout>